[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tno.quantum.problems.portfolio_optimization"
description = "Quantum Computing based Portfolio Optimization"
readme = "README.md"
authors = [{ name = "TNO Quantum Code Lab", email = "tnoquantum@tno.nl" }]
maintainers = [{ name = "TNO Quantum Code Lab", email = "tnoquantum@tno.nl" }]
keywords = [
    "TNO",
    "Quantum",
    "Portfolio Optimization",
    "QUBO",
    "Quantum Annealing",
]
license = { text = "Apache License, Version 2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Typing :: Typed",
]
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "openpyxl>=3.1.2",
    "matplotlib",
    "scipy",
    "pandas",
    "tno.quantum.optimization.qubo[dwave]~=1.0",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/TNO-Quantum/"
Documentation = "https://github.com/TNO-Quantum/"
Source = "https://github.com/TNO-Quantum/problems.portfolio_optimization"

[project.optional-dependencies]
tests = ["pytest>=8.1.1", "pytest-cov>=4.1.0", "tomlkit"]

[tool.setuptools]
platforms = ["any"]

[tool.setuptools.dynamic]
version = { attr = "tno.quantum.problems.portfolio_optimization.__version__" }

[tool.setuptools.package-data]
"*" = ["py.typed"]
"tno.quantum.problems.portfolio_optimization.datasets" = [
    "benchmark_dataset.xlsx",
]
"tno.quantum.problems.portfolio_optimization.assets" = ["example.png"]
