[metadata]
name = tno.quantum.problems.portfolio_optimization
author = TNO Quantum
author_email = tnoquantum@tno.nl
maintainer = TNO Quantum
maintainer_email = tnoquantum@tno.nl
description = Quantum Computing based Portfolio Optimization
classifiers = 
	License :: OSI Approved :: Apache Software License
	Private :: Do Not Upload to pypi server
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Operating System :: OS Independent
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	Intended Audience :: Science/Research
	Typing :: Typed
license = Apache License, Version 2.0
license_file = LICENSE
platform = any
python_requires = >=3.8
keywords = 
	TNO
	Quantum
	Portfolio Optimization
	Quantum Annealing
download_url = https://ci.tno.nl/gitlab/quantum/quantum-applications/quantum-toolbox/microlibs/problems/microlibs/portfolio-optimization.git
version = attr: tno.quantum.problems.portfolio_optimization.__version__
long_description_content_type = text/markdown
long_description = file: README.md

[options]
packages = 
	tno.quantum.problems.portfolio_optimization
	tno.quantum.problems.portfolio_optimization.components
	tno.quantum.problems.portfolio_optimization.components.qubos
	tno.quantum.problems.portfolio_optimization.test
zip_safe = False
install_requires = 
	numpy>=1.21.6
	dimod
	dwave_samplers
	dwave_system
	matplotlib
	pandas
	openpyxl
	tqdm
	scipy
namespace_packages = 
	tno
	tno.quantum
	tno.quantum.problems

[options.extras_require]
tests = 
	pytest~=7.2.2
	pytest_cov~=4.0.0
dev = 
	dev_utils~=1.1.3

[options.package_data]
dev_utils = py.typed
dev_utils.docs =
	tno.quantum.problems.portfolio_optimization.datasets.benchmark_dataset.xlsx

