[metadata]
name = tno.quantum.problems.portfolio_optimization
author = TNO Quantum
author_email = tnoquantum@tno.nl
maintainer = TNO Quantum
maintainer_email = tnoquantum@tno.nl
description = Quantum Computing based Portfolio Optimization
classifiers = 
	License :: OSI Approved :: Apache Software License
	Private :: Do Not Upload to pypi server
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Operating System :: OS Independent
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	Intended Audience :: Science/Research
	Typing :: Typed
license = Apache License, Version 2.0
license_file = LICENSE
platform = any
python_requires = >=3.8
keywords = 
	TNO
	Quantum
	Portfolio Optimization
	Quantum Annealing
download_url = https://ci.tno.nl/gitlab/quantum/quantum-applications/quantum-toolbox/microlibs/problems/microlibs/portfolio-optimization.git
version = attr: tno.quantum.problems.portfolio_optimization.__version__
long_description_content_type = text/markdown
long_description = file: README.md

[options]
packages = 
	tno.quantum.problems.portfolio_optimization
	tno.quantum.problems.portfolio_optimization.components
	tno.quantum.problems.portfolio_optimization.components.qubos
	tno.quantum.problems.portfolio_optimization.datasets
	tno.quantum.problems.portfolio_optimization.test
zip_safe = False
install_requires = 
	numpy>=1.21.6
	dimod>=0.12.13
	matplotlib>=3.0.0
	pandas>=2.0.3
	openpyxl>=3.1.2
	tqdm>=4.66.1
	scipy>=1.2.1
	dwave_samplers>=1.2.0
namespace_packages = 
	tno
	tno.quantum
	tno.quantum.problems

[options.extras_require]
quantum =
	dwave_system>=1.21.0
tests = 
	pytest~=8.1.1
	pytest_cov~=4.1.0
dev = 
	dev_utils~=1.1.8

[options.package_data]
tno.quantum.problems.portfolio_optimization = py.typed
tno.quantum.problems.portfolio_optimization.datasets = benchmark_dataset.xlsx

